[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/haul_summary/HaulSummary.gd" id="1_haul"]

[node name="HaulSummary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_haul")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.12, 0.22, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
text = "Haul Summary"
horizontal_alignment = 1

[node name="StatsBar" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Panel/MarginContainer/VBox/StatsBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.85, 1, 0.8)
text = "Time: 0s | Caught: 0 | Value: 0g"

[node name="GoldLabel" type="Label" parent="Panel/MarginContainer/VBox/StatsBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
text = "50g"
horizontal_alignment = 2

[node name="ButtonBar" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="SellAllBtn" type="Button" parent="Panel/MarginContainer/VBox/ButtonBar"]
layout_mode = 2
custom_minimum_size = Vector2(140, 40)
theme_override_font_sizes/font_size = 16
text = "Sell All"

[node name="KeepAllBtn" type="Button" parent="Panel/MarginContainer/VBox/ButtonBar"]
layout_mode = 2
custom_minimum_size = Vector2(140, 40)
theme_override_font_sizes/font_size = 16
text = "Keep All"

[node name="NoCatchLabel" type="Label" parent="Panel/MarginContainer/VBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 0.8)
text = "No catch this dive..."
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="FishList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="BottomButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 30

[node name="ReturnSeaBtn" type="Button" parent="Panel/MarginContainer/VBox/BottomButtons"]
layout_mode = 2
custom_minimum_size = Vector2(180, 45)
theme_override_font_sizes/font_size = 16
text = "Return to Sea"

[node name="ReturnTownBtn" type="Button" parent="Panel/MarginContainer/VBox/BottomButtons"]
layout_mode = 2
custom_minimum_size = Vector2(180, 45)
theme_override_font_sizes/font_size = 16
text = "Return to Town"
